# stl-seed

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_v0.1.0.md  STORY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint.yml
configs/: default.yaml  pilot.yaml  sweep_main.yaml
configs/backend/: bnb.yaml  mlx.yaml
configs/filter/: continuous.yaml  hard.yaml  quantile.yaml
configs/model/: qwen3_0.6b.yaml  qwen3_1.7b.yaml  qwen3_4b.yaml
configs/task/: bio_ode_mapk.yaml  bio_ode_repressilator.yaml  bio_ode_toggle.yaml  glucose_insulin.yaml
docker/: Dockerfile  runpod_README.md  runpod_bootstrap.sh
docs/: README.md  api_reference.md  getting_started.md  index.md
docs/blog/: stl_seed_intro.md
examples/: 01_basic_simulation.py  02_stl_filtering.py  03_mlx_training_minimal.py  README.md
notebooks/: _build_demo_notebook.py  demo_colab.ipynb
paper/: RESULTS.md  abstract.md  adversary_findings.md  aksaray_comparison.md  coding_task_design.md  coding_toy_results.md  compute_cost_results.md  cross_task_validation.md  failure_case_study_repressilator.md  falsification_criteria.md  fmai_2026_draft.md  hierarchical_bayes.md  hierarchical_bayes_summary.json  inference_method.md  information_theory.md  landscape_theorem.md  memory_pareto.md  pav_comparison.md  pav_v2.md  power_analysis_empirical.md  preregistration_ledger.md  projection_theorem.md  quant_size_4b_addendum.md  quant_size_results.md  real_llm_comparison.md  scaling_laws.md  snell_scaling_position.md  stlcgpp_comparison.md  theory.md  unified_comparison_results.md  venue_targets.md
paper/figures/: _make_memory_pareto.py  _make_money_plot.py  memory_pareto.csv  money_plot.md
scripts/: _info_theory_compute.py  _make_snell_position.py  auto_tune_specs.py  benchmark_compute_cost.py  canonical_analysis.py  coding_toy_demo.py  filter_pilot.py  generate_canonical.py  generate_pilot.py  hierarchical_bayes.py  power_analysis_real.py  quant_size_sweep.py  real_llm_hard_specs.py  release_prep.py  run_adversary.py  run_canonical_eval.py  run_canonical_sweep.py  run_pav_comparison.py  run_pav_comparison_v2.py  run_unified_comparison.py  scaling_laws_analysis.py  smoke_test_bnb.py  smoke_test_mlx.py  sweep_monitor.py  validate_phase2_pipeline.py
src/stl_seed/: __init__.py  cli.py
src/stl_seed/analysis/: __init__.py  adversary.py  decomposition.py  gold_scorers.py
src/stl_seed/baselines/: __init__.py  comparison.py  pav.py  pav_rollout.py
src/stl_seed/evaluation/: __init__.py  harness.py  metrics.py  runner.py
src/stl_seed/filter/: __init__.py  conditions.py  dataset.py
src/stl_seed/generation/: __init__.py  policies.py  runner.py  store.py
src/stl_seed/inference/: __init__.py  baselines.py  beam_search_warmstart.py  cmaes_gradient.py  gradient_guided.py  horizon_folded.py  hybrid.py  mlx_llm_proposal.py  protocol.py  rollout_tree.py
src/stl_seed/specs/: __init__.py  bio_ode_specs.py  calibration.py  cardiac_specs.py  coding_specs.py  glucose_insulin_specs.py
src/stl_seed/stats/: __init__.py  bootstrap.py  hierarchical_bayes.py  tost.py
src/stl_seed/stl/: __init__.py  evaluator.py  streaming.py  worst_subformula.py
src/stl_seed/tasks/: __init__.py  _trajectory.py  bio_ode.py  bio_ode_params.py  cardiac_ap.py  coding_toy.py  glucose_insulin.py
src/stl_seed/training/: __init__.py  loop.py  prompts.py  tokenize.py
src/stl_seed/training/backends/: __init__.py  base.py  bnb.py  mlx.py  mock.py
tests/: conftest.py  test_adversary.py  test_auto_tune.py  test_beam_search_warmstart.py  test_benchmark_compute_cost.py  test_bio_ode.py  test_canonical_scripts.py  test_cardiac_ap.py  test_cli_extra.py  test_cmaes_gradient.py  test_evaluation.py  test_evaluation_extra.py  test_filter.py  test_filter_dataset.py  test_generation.py  test_glucose_insulin.py  test_horizon_folded.py  test_inference.py  test_integration.py  test_mlx_llm_proposal.py  test_mlx_loop.py  test_pav_baseline.py  test_phase2_validation.py  test_rollout_tree.py  test_smoke.py  test_specs_calibration.py  test_specs_extra.py  test_stats.py  test_stats_extra.py  test_stl_evaluator.py  test_stl_extra.py  test_stl_properties.py  test_topology_aware.py  test_training.py  test_training_extra.py  test_unified_comparison.py
