[project]
name = "stl-seed"
version = "0.0.1"
description = "Soft-verified SFT for scientific control: STL robustness as a formal process verifier on small open-weights LLMs"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11,<3.13"
authors = [
    { name = "Abdullah AlGhamdi", email = "alghamdi@berkeley.edu" },
]
keywords = ["llm", "stl", "formal-methods", "scientific-agents", "qlora", "bitsandbytes"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core scientific stack
    "numpy>=1.26,<3.0",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "pandas>=2.2",
    # ODE simulation (JAX-native, runs on Apple Silicon Metal + CUDA)
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "diffrax>=0.6,<0.8",
    "equinox>=0.11",
    "jaxtyping>=0.2.30",
    # LLM scaffolding
    "transformers>=4.45",
    "datasets>=3.0",
    "accelerate>=1.0",
    "peft>=0.13",
    "tokenizers>=0.20",
    # Statistics / Bayesian inference
    "numpyro>=0.16",
    "arviz>=0.20",
    # Configuration + CLI
    "hydra-core>=1.3",
    "typer>=0.13",
    "rich>=13.9",
    # I/O
    "pyyaml>=6.0",
    "huggingface-hub>=0.26",
]

[project.optional-dependencies]
# Apple Silicon backend (M-series GPUs via MLX)
mlx = [
    "mlx>=0.20",
    "mlx-lm>=0.20",
]
# CUDA backend (NVIDIA via bitsandbytes + TRL)
# NOTE: install bnb only on Linux/CUDA hosts (RunPod). Will fail on macOS — that is intentional.
cuda = [
    "bitsandbytes>=0.44",
    "trl>=0.12",
]
# Development
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "pyright>=1.1",
    "pre-commit>=4.0",
    "ipython>=8.28",
    "jupyterlab>=4.2",
]

[project.scripts]
stl-seed = "stl_seed.cli:app"

[project.urls]
Homepage = "https://github.com/AA-Alghamdi/stl-seed"
Repository = "https://github.com/AA-Alghamdi/stl-seed"
Issues = "https://github.com/AA-Alghamdi/stl-seed/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stl_seed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM"]
ignore = [
    "E501",  # line too long handled by formatter
    "N803",  # arg name should be lowercase (we use ML conventions: X, N, A, etc.)
    "N806",  # variable in function should be lowercase (same reason)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F811"]  # allow unused imports / redefinitions in tests
"scripts/**" = ["E402"]  # allow late imports for path manipulation

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
    "slow: tests that take >5s (skip with '-m \"not slow\"')",
    "gpu: tests requiring a GPU (skip with '-m \"not gpu\"')",
    "cuda: tests requiring CUDA (skip on macOS)",
    "mlx: tests requiring MLX (skip on non-Apple-Silicon)",
]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = "warning"
reportPrivateUsage = false
